--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -22,20 +22,44 @@
             <button id="boton"  class="btn mt-3 btn-primary">Agregar</button>
         </form>
         <hr>
-        <table class="table table-bordered">
+        <table class="table table-bordered table-hover">
             <thead>
                 <tr>
                     <th>#</th>
-                    <th>Title</th>
-                    <th>Description</th>
-                    <th>Operations</th>
+                    <th>Tarea</th>
+                    <th>Descripcion</th>
+                    <th>Operaciones</th>
                 </tr>
             </thead>
+            <tbody>
+                <% for (let i =0; i < task.length; i++) {%>
+                    <tr>
+
+                        <td>
+                            <%= i+1 %>
+                        </td>
+                        <td>
+                            <strong>
+                                <%= task[i].title%>
+                            </strong>
+                        </td>
+                        <td>
+                            <%= task[i].description%>
+                        </td>
+                        <td>
+
+
+                            <a class="<%= task[i].status ? 'btn btn-success': 'btn btn-dark'%>" 
+                                href="turn/<%= task[i].id%>">Hecho</a>
+
+     
+                        <a class="btn btn-danger" href="/<%= task[i].id%>" >Eliminar</a>
+
+                        </td>
+                    </tr>
+                    <% }%>
+            </tbody>
         </table>
-        <tbody>
-            <% for (let i =0; i< task.length; i++){%>
-                <% }%>
-        </tbody>
     </div>
     <script>
         document.getElementById('title').focus()
